--- a/views/compose.ejs
+++ b/views/compose.ejs
@@ -2,10 +2,18 @@
 
 
 <h1>Compose</h1>
-<form action="" method="post">
-    <input type="text">
-    <button type="submit">Publish</button>
-</form>
+<form action="/compose" method="post">
+    <div class="form-group">
 
+        <label for="titles">Title</label>
+        <input type="text" name="title"class="form-control" placeholder="Title text" id="text"> 
+        <label for="posts">Post</label> 
+        <textarea type="text" name="newpost" class="form-control" placeholder=" Post Here..." id="post-text" rows="5" cols="30"></textarea> 
+    
+    </div>
+        
+        <button type="submit" class="btn btn-primary form-control">Publish</button>
+
+</form>
 
 <%-include("./partials/footer")-%>
