--- a/views/compose.ejs
+++ b/views/compose.ejs
@@ -2,7 +2,7 @@
 
 
 <h1>Compose</h1>
-<form action="/compose" method="post">
+<form action="/" method="post">
     <div class="form-group">
 
         <label for="titles">Title</label>
@@ -12,7 +12,7 @@
     
     </div>
         
-        <button type="submit" class="btn btn-primary form-control">Publish</button>
+        <button type="submit" class="btn btn-primary ">Publish</button>
 
 </form>
 
