--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,8 +2,15 @@
 
 <h1>Home</h1>
 
-    <p><%= text %></p>
+    <p><%= text %></p> <br>
+
+
+    <% posts.forEach(function(post) { %>
+        <h1><%= post.blogTitle %></h1> 
+        <p><%= post.blogContent.subStrong(0, 100), + "..." %>
+        <a href="/posts/<%= post.title%>">Read More</a>
+        </p>
+    <% }) %>
 
 
 <%- include("partials/footer") -%>
-
