--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,7 +7,7 @@
 
     <% posts.forEach(function(post) { %>
         <h1><%= post.blogTitle %></h1> 
-        <p><%= post.blogContent.subStrong(0, 100), + "..." %>
+        <p><%= post.blogContent.subStrong(0, 100) + "..." %>
         <a href="/posts/<%= post.title%>">Read More</a>
         </p>
     <% }) %>
